testdata/baselines/reference/submodule/compiler/nodeNextPackageSelfNameWithOutDirDeclDirNestedDirs.errors.txt
src/thing.ts(8,21): error TS2307: Cannot find module '@this/package' or its corresponding type declarations.


==== tsconfig.json (0 errors) ====
    {
      "compilerOptions": {
        "module": "nodenext",
        "outDir": "./dist",
        "declarationDir": "./types",
        "declaration": true
      }
    }
==== index.ts (0 errors) ====
    export {srcthing as thing} from "./src/thing.js";
==== src/thing.ts (1 errors) ====
    // The following import should cause `index.ts`
    // to be included in the build, which will,
    // in turn, cause the common src directory to not be `src`
    // (the harness is wierd here in that noImplicitReferences makes only
    // this file get loaded as an entrypoint and emitted, while on the
    // real command-line we'll crawl the imports for that set - a limitation
    // of the harness, I suppose)
    import * as me from "@this/package";
                        ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module '@this/package' or its corresponding type declarations.
    
    me.thing();
    
    export function srcthing(): void {}
    
    
==== package.json (0 errors) ====
    {
      "name": "@this/package",
      "type": "module",
      "exports": {
        ".": {
          "default": "./dist/index.js",
          "types": "./types/index.d.ts"
        }
      }
    }